test_cases/tests/axum/not_a_function.stderr
error: expected `fn`
 --> tests/axum/not_a_function.rs:4:1
  |
4 | struct A;
  | ^^^^^^
